@@ -16,8 +16,6 @@ project.pluginManager.withPlugin("java") {
 	}
 	tasks.withType<JavaCompile>().configureEach {
 		javaCompiler.set(compiler)
-		// Temporary workaround for https://github.com/gradle/gradle/issues/15538
-		options.forkOptions.jvmArgs!!.addAll(listOf("--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"))
 	}
 	tasks.withType<GroovyCompile>().configureEach {
 		javaLauncher.set(javaToolchainService.launcherFor {
